# data-rs

./: .gitkeep  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml
changelog.d/: 20260414_quality_audit_best_practices.md  20260414_replace_funty_with_platform_num.md
docs/case-studies/issue-14/: README.md
rust/: crates.js  help.html  settings.html  src-files.js
rust/platform_data/: all.html  enum.Error.html  enum.Flow.html  index.html  macro.query.html  sidebar-items.js  struct.AddrToRaw.html  struct.Hybrid.html  struct.LinksConstants.html  struct.Point.html  struct.PointIter.html  struct.Query.html  struct.RawToAddr.html  trait.LinkReference.html  trait.LinkType.html  trait.Links.html  trait.ToQuery.html  type.ReadHandler.html  type.WriteHandler.html
rust/platform_data/constants/: struct.LinksConstants.html
rust/search.index/: 03bc18560589.js  0ae26b504e17.js  0b6ba3cd1a1f.js  181785197713.js  2ae6c12200b6.js  3120763e4dea.js  393376d619fa.js  53eb659cd293.js  558365e79044.js  653c3092a298.js  6ef589cda1b1.js  7bb9269fc80c.js  root.js
scripts/: bump-version.rs  check-changelog-fragment.rs  check-release-needed.rs  check-version-modification.rs  collect-changelog.rs  create-changelog-fragment.rs  create-github-release.rs  detect-code-changes.rs  get-bump-type.rs  get-version.rs  git-config.rs  publish-crate.rs  rust-paths.rs  version-and-commit.rs
src/: constants.rs  converters.rs  flow.rs  hybrid.rs  lib.rs  link_type.rs  links.rs  query.rs
tests/: constants.rs  converters.rs  hybrid.rs  links.rs  query.rs
(+65 files in other folders)
