[package]
name = "platform-data"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["uselesssgoddess", "Linksplatform Team <linksplatformtechnologies@gmail.com>"]
license = "Unlicense"
repository = "https://github.com/linksplatform/data-rs"
homepage = "https://github.com/linksplatform/data-rs"
description = "Data types and traits for the LinksPlatform"
readme = "README.md"
keywords = ["links", "linksplatform", "data-structures", "associative"]
categories = ["data-structures"]

[dependencies]
beef = "0.5.2"
platform-num = "0.8.0"
thiserror = "2.0.18"

[dev-dependencies]
quickcheck = "1.1.0"
quickcheck_macros = "1.2.0"

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true
